moved stan models

--- a/dlm_kalman.ipynb
+++ b/dlm_kalman.ipynb
@@ -13,7 +13,7 @@
     "import time\n",
     "import scipy.interpolate as interpolate\n",
     "import netCDF4\n",
-    "from stan_dlm_models import *\n",
+    "from models.stan_dlm_models import *\n",
     "%matplotlib inline"
    ]
   },
