fixed spatial notebook

--- a/dlm_kalman_spatial.ipynb
+++ b/dlm_kalman_spatial.ipynb
@@ -106,7 +106,8 @@
     "qbo50 = Y(T) # This extacts the regressor at the times you have in your dataset, interpolated in case the time grid is different\n",
     "\n",
     "# SAOD\n",
-    "# ***WILL BE DONE ON THE FLY AS LATITUDE DEPENDENT***\n",
+    "saod_data = netCDF4.Dataset('regressors/sad_1979_2017_10deg_60S_60N_missNans.nc')\n",
+    "# ***RESCALING WILL BE DONE ON THE FLY AS IT IS LATITUDE DEPENDENT***\n",
     "\n",
     "# How many regressors?\n",
     "nreg = 5"
