fixed spatial notebook

--- a/dlm_kalman_spatial.ipynb
+++ b/dlm_kalman_spatial.ipynb
@@ -213,7 +213,7 @@
     "                        }\n",
     "        \n",
     "        # Run the model\n",
-    "        fit = model_kalman_ar1.sampling(data=data, iter=3000, warmup=1000, chains=4, init = [initial_state, initial_state, initial_state, initial_state], verbose=True, pars=('sigma_trend', 'sigma_seas', 'sigma_AR', 'rhoAR', 'trend', 'slope', 'beta', 'seasonal', 'residuals'))\n",
+    "        fit = model_kalman_ar1.sampling(data=data, iter=iterations, warmup=warmup, chains=n_chains, init = [initial_state for i in range(n_chains)], verbose=True, pars=('sigma_trend', 'sigma_seas', 'sigma_AR', 'rhoAR', 'trend', 'slope', 'beta', 'seasonal', 'residuals'))\n",
     "\n",
     "        # Extract and re-scale the key bits from the DLM run\n",
     "        \n",
