--- a/dlm_kalman_spatial.ipynb
+++ b/dlm_kalman_spatial.ipynb
@@ -155,7 +155,7 @@
     "pressures[:] = P\n",
     "\n",
     "# Set up the progress bar\n",
-    "pbar = tqdm.tqdm_notebook(total = len(P)*len(L), desc = \"Pressures/latitudes\")\n",
+    "pbar = tqdm.tqdm_notebook(total = len(P)*len(L), desc = \"press/lats\")\n",
     "\n",
     "# Loop over pressures and latitudes\n",
     "for pressure in range(len(P)):\n",
