fixed error in spatial notebook

--- a/dlm_kalman_spatial.ipynb
+++ b/dlm_kalman_spatial.ipynb
@@ -192,7 +192,7 @@
     "        regressors = np.column_stack([enso, solar, qbo30, qbo50, saod]) # Stack of all the regressors together in a 2d array\n",
     "\n",
     "        # Data: this is a dictionary of all of the data/inputs that the DLM model needs (descriptions below)\n",
-    "        data = {\n",
+    "        input_data = {\n",
     "                            'd':d, # float[N] data vector\n",
     "                            's':s, # float[N] std-dev error bars\n",
     "                            'N':N, # (int) number of time-steps in the time-series\n",
@@ -213,7 +213,7 @@
     "                        }\n",
     "        \n",
     "        # Run the model\n",
-    "        fit = model_kalman_ar1.sampling(data=data, iter=iterations, warmup=warmup, chains=n_chains, init = [initial_state for i in range(n_chains)], verbose=True, pars=('sigma_trend', 'sigma_seas', 'sigma_AR', 'rhoAR', 'trend', 'slope', 'beta', 'seasonal', 'residuals'))\n",
+    "        fit = model_kalman_ar1.sampling(data=input_data, iter=iterations, warmup=warmup, chains=n_chains, init = [initial_state for i in range(n_chains)], verbose=True, pars=('sigma_trend', 'sigma_seas', 'sigma_AR', 'rhoAR', 'trend', 'slope', 'beta', 'seasonal', 'residuals'))\n",
     "\n",
     "        # Extract and re-scale the key bits from the DLM run\n",
     "        \n",
