--- a/dlm_kalman.ipynb
+++ b/dlm_kalman.ipynb
@@ -257,7 +257,7 @@
     "# Set the data and initialization of parameters that are fed into the DLM\n",
     "\n",
     "# Data: this is a dictionary of all of the data/inputs that the DLM model needs (descriptions below)\n",
-    "data = {\n",
+    "input_data = {\n",
     "                    'd':d, # float[N] data vector\n",
     "                    's':s, # float[N] std-dev error bars\n",
     "                    'N':N, # (int) number of time-steps in the time-series\n",
@@ -322,7 +322,7 @@
     "\n",
     "# Ok, let's run it (and print out the run-time)\n",
     "start = time.time()\n",
-    "fit = model_kalman_ar1.sampling(data=data, iter=3000, warmup=1000, chains=1, init = [initial_state], verbose=True, pars=('sigma_trend', 'sigma_seas', 'sigma_AR', 'rhoAR', 'trend', 'slope', 'beta', 'seasonal', 'residuals'))\n",
+    "fit = model_kalman_ar1.sampling(data=input_data, iter=3000, warmup=1000, chains=1, init = [initial_state], verbose=True, pars=('sigma_trend', 'sigma_seas', 'sigma_AR', 'rhoAR', 'trend', 'slope', 'beta', 'seasonal', 'residuals'))\n",
     "print(time.time() - start)"
    ]
   },
