updated spatial notebook

--- a/dlm_kalman_spatial.ipynb
+++ b/dlm_kalman_spatial.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,9 +20,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:pystan:COMPILING THE C++ CODE FOR MODEL anon_model_ce0cf070d48949045c8df5a0c7d92012 NOW.\n"
+     ]
+    }
+   ],
    "source": [
     "# Compile the DLM model: this translates the stan model in stan_dlm_models.py into C++ and compiles it\n",
     "# Note: this step may take a few minutes\n",
@@ -31,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,44 +123,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e1bd61cc7c5a420aa6ea75b1f4debbb7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/html": [
+       "<p>Failed to display Jupyter Widget of type <code>HBox</code>.</p>\n",
+       "<p>\n",
+       "  If you're reading this message in Jupyter Notebook or JupyterLab, it may mean\n",
+       "  that the widgets JavaScript is still loading. If this message persists, it\n",
+       "  likely means that the widgets JavaScript library is either not installed or\n",
+       "  not enabled. See the <a href=\"https://ipywidgets.readthedocs.io/en/stable/user_install.html\">Jupyter\n",
+       "  Widgets Documentation</a> for setup instructions.\n",
+       "</p>\n",
+       "<p>\n",
+       "  If you're reading this message in another notebook frontend (for example, a static\n",
+       "  rendering on GitHub or <a href=\"https://nbviewer.jupyter.org/\">NBViewer</a>),\n",
+       "  it may mean that your frontend doesn't currently support widgets.\n",
+       "</p>\n"
+      ],
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, description='press/lats', max=324), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/Cellar/python3/3.6.4_2/Frameworks/Python.framework/Versions/3.6/lib/python3.6/site-packages/pystan/misc.py:399: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  elif np.issubdtype(np.asarray(v).dtype, float):\n"
+     ]
+    }
+   ],
    "source": [
     "# How many MCMC chains/samples to do\n",
-    "n_chains = 4\n",
+    "n_chains = 1\n",
     "warmup = 1000\n",
     "iterations = 3000\n",
     "n_samples = n_chains*(iterations-warmup)\n",
     "\n",
-    "# Make the netcdf file for saving the data\n",
-    "results = netCDF4.Dataset('results/results.nc', 'w')\n",
-    "\n",
-    "# Create dimensions\n",
-    "results.createDimension('pressure', len(P))\n",
-    "results.createDimension('latitude', len(L))\n",
-    "results.createDimension('time', len(T))\n",
-    "results.createDimension('nsamples', n_samples)\n",
-    "results.createDimension('nreg', nreg)\n",
-    "\n",
-    "# Create variables\n",
-    "lats = results.createVariable('latitude', int, ('latitude',), zlib=True)\n",
-    "pressures = results.createVariable('pressure', 'float', ('pressure',), zlib=True)\n",
-    "times = results.createVariable('time', int, ('time',), zlib=True)\n",
-    "trend = results.createVariable('trend', float, ('nsamples','pressure','latitude', 'time'), zlib=True)\n",
-    "seasonal = results.createVariable('seasonal', float, ('nsamples','pressure','latitude', 'time'), zlib=True)\n",
-    "slope = results.createVariable('slope', float, ('nsamples','pressure','latitude','time'), zlib=True)\n",
-    "residuals = results.createVariable('residuals', float, ('nsamples','pressure','latitude','time'), zlib=True)\n",
-    "regressor_coefficients = results.createVariable('regressor_coefficients', float, ('nsamples','pressure','latitude','nreg'), zlib=True)\n",
-    "sigma_trend = results.createVariable('sigma_trend', float, ('nsamples','pressure','latitude'), zlib=True)\n",
-    "sigma_seas = results.createVariable('sigma_seas', float, ('nsamples','pressure','latitude'), zlib=True)\n",
-    "sigma_AR = results.createVariable('sigma_AR', float, ('nsamples','pressure','latitude'), zlib=True)\n",
-    "rho_AR = results.createVariable('rho_AR', float, ('nsamples','pressure','latitude'), zlib=True)\n",
-    "\n",
-    "# Assign variables\n",
-    "lats[:] = L\n",
-    "times[:] = T\n",
-    "pressures[:] = P\n",
+    "# Where to save the results\n",
+    "trend = np.zeros((n_samples, len(P), len(L), len(T)))\n",
+    "slope = np.zeros((n_samples, len(P), len(L), len(T)))\n",
+    "seasonal = np.zeros((n_samples, len(P), len(L), len(T)))\n",
+    "residuals = np.zeros((n_samples, len(P), len(L), len(T)))\n",
+    "regressor_coefficients = np.zeros((n_samples, len(P), len(L), nreg))\n",
+    "sigma_trend = np.zeros((n_samples, len(P), len(L)))\n",
+    "sigma_seas = np.zeros((n_samples, len(P), len(L)))\n",
+    "sigma_AR = np.zeros((n_samples, len(P), len(L)))\n",
+    "rho_AR = np.zeros((n_samples, len(P), len(L)))\n",
     "\n",
     "# Set up the progress bar\n",
     "pbar = tqdm.tqdm_notebook(total = len(P)*len(L), desc = \"press/lats\")\n",
@@ -168,88 +196,100 @@
     "\n",
     "        # Extract the error-bars on the time-series from the netCDF\n",
     "        s = data['o3_sigma'][:, pressure, latitude]\n",
-    "\n",
-    "        # IMPORTANT: The DLM is set-up to run on mean subtracted data re-scaled to have a dynamic range of unity\n",
-    "        # NB: We must re-scale the data here and re-scale back to the original units after the DLM run, look out for this later\n",
-    "\n",
-    "        # Mean subtract and re-scale the data so it has dynamic range of unity, \n",
-    "        # Apply same scaling transform to the std-dev error bars\n",
-    "        scale = max(d) - min(d)\n",
-    "        mean = np.mean(d)\n",
-    "        d = d - mean\n",
-    "        d = d/scale\n",
-    "        s = s/scale\n",
     "        \n",
-    "        # Set the SAOD regressor depending on the latitude\n",
-    "        y = saod_data['saod_strat_column'][:, latitude]\n",
-    "        t = saod_data['time'][:]\n",
-    "        y = y - np.mean(y)\n",
-    "        y = y/(max(y) - min(y))\n",
-    "        Y = interpolate.InterpolatedUnivariateSpline(t, y)\n",
-    "        saod = Y(T)\n",
+    "        # Check if the data are there\n",
+    "        if np.mean(d) != 0:\n",
     "\n",
-    "        # Regressors\n",
-    "        regressors = np.column_stack([enso, solar, qbo30, qbo50, saod]) # Stack of all the regressors together in a 2d array\n",
+    "            # IMPORTANT: The DLM is set-up to run on mean subtracted data re-scaled to have a dynamic range of unity\n",
+    "            # NB: We must re-scale the data here and re-scale back to the original units after the DLM run, look out for this later\n",
     "\n",
-    "        # Data: this is a dictionary of all of the data/inputs that the DLM model needs (descriptions below)\n",
-    "        input_data = {\n",
-    "                            'd':d, # float[N] data vector\n",
-    "                            's':s, # float[N] std-dev error bars\n",
-    "                            'N':N, # (int) number of time-steps in the time-series\n",
-    "                            'nreg':nreg, # (int) number of regressors\n",
-    "                            'regressors':regressors, # float[N, nreg] the regressors\n",
-    "                            'S':10., # prior variance on the regression coefficients (priors are zero mean Gaussian with variance S)\n",
-    "                            'sigma_trend_prior':1e-4, # std-dev of the half-Gaussian prior on sigma_trend that controls how wiggly the trend can be\n",
-    "                            'sigma_seas_prior':0.01, # std-dev of the half-Gaussian prior on sigma_seas that controls how dynamic the seaonal cycle can be\n",
-    "                            'sigma_AR_prior':0.5 # std-dev of the half_Gaussian prior on the AR1 process std-dev \n",
-    "                        }\n",
+    "            # Mean subtract and re-scale the data so it has dynamic range of unity, \n",
+    "            # Apply same scaling transform to the std-dev error bars\n",
+    "            scale = max(d) - min(d)\n",
+    "            mean = np.mean(d)\n",
+    "            d = d - mean\n",
+    "            d = d/scale\n",
+    "            s = s/scale\n",
     "\n",
-    "        # Initialization: Initial guess values for the hyper-parameters\n",
-    "        initial_state = {\n",
-    "                         'sigma_trend':0.0001,\n",
-    "                         'sigma_seas':0.001,\n",
-    "                         'sigma_AR':0.01,\n",
-    "                         'rhoAR':0.1,\n",
-    "                        }\n",
-    "        \n",
-    "        # Run the model\n",
-    "        fit = model_kalman_ar1.sampling(data=input_data, iter=iterations, warmup=warmup, chains=n_chains, init = [initial_state for i in range(n_chains)], verbose=True, pars=('sigma_trend', 'sigma_seas', 'sigma_AR', 'rhoAR', 'trend', 'slope', 'beta', 'seasonal', 'residuals'))\n",
+    "            # Set the SAOD regressor depending on the latitude\n",
+    "            y = saod_data['saod_strat_column'][:, latitude]\n",
+    "            t = saod_data['time'][:]\n",
+    "            y = y - np.mean(y)\n",
+    "            y = y/(max(y) - min(y))\n",
+    "            Y = interpolate.InterpolatedUnivariateSpline(t, y)\n",
+    "            saod = Y(T)\n",
     "\n",
-    "        # Extract and re-scale the key bits from the DLM run\n",
-    "        \n",
-    "        # Trend\n",
-    "        trend[:, pressure, latitude, :] = fit.extract()['trend'][:,:]*scale + mean\n",
+    "            # Regressors\n",
+    "            regressors = np.column_stack([enso, solar, qbo30, qbo50, saod]) # Stack of all the regressors together in a 2d array\n",
     "\n",
-    "        # Gradient of the DLM trend\n",
-    "        slope[:, pressure, latitude, :] = fit.extract()['slope'][:,:]*scale\n",
+    "            # Data: this is a dictionary of all of the data/inputs that the DLM model needs (descriptions below)\n",
+    "            input_data = {\n",
+    "                                'd':d, # float[N] data vector\n",
+    "                                's':s, # float[N] std-dev error bars\n",
+    "                                'N':N, # (int) number of time-steps in the time-series\n",
+    "                                'nreg':nreg, # (int) number of regressors\n",
+    "                                'regressors':regressors, # float[N, nreg] the regressors\n",
+    "                                'S':10., # prior variance on the regression coefficients (priors are zero mean Gaussian with variance S)\n",
+    "                                'sigma_trend_prior':1e-4, # std-dev of the half-Gaussian prior on sigma_trend that controls how wiggly the trend can be\n",
+    "                                'sigma_seas_prior':0.01, # std-dev of the half-Gaussian prior on sigma_seas that controls how dynamic the seaonal cycle can be\n",
+    "                                'sigma_AR_prior':0.5 # std-dev of the half_Gaussian prior on the AR1 process std-dev \n",
+    "                            }\n",
     "\n",
-    "        # Seasonal cycle\n",
-    "        seasonal[:, pressure, latitude, :] = fit.extract()['seasonal'][:,:]*scale\n",
+    "            # Initialization: Initial guess values for the hyper-parameters\n",
+    "            initial_state = {\n",
+    "                             'sigma_trend':0.0001,\n",
+    "                             'sigma_seas':0.001,\n",
+    "                             'sigma_AR':0.01,\n",
+    "                             'rhoAR':0.1,\n",
+    "                            }\n",
     "\n",
-    "        # Residuals\n",
-    "        residuals[:, pressure, latitude, :] = fit.extract()['residuals'][:,:]*scale\n",
+    "            # Run the model\n",
+    "            fit = model_kalman_ar1.sampling(data=input_data, iter=iterations, warmup=warmup, chains=n_chains, init = [initial_state for i in range(n_chains)], verbose=True, pars=('sigma_trend', 'sigma_seas', 'sigma_AR', 'rhoAR', 'trend', 'slope', 'beta', 'seasonal', 'residuals'))\n",
     "\n",
-    "        # Regressor coefficients (also need re-scaling back to data units)\n",
-    "        regressor_coefficients[:, pressure, latitude, :] = fit.extract()['beta'][:,:]*scale\n",
+    "            # Extract and re-scale the key bits from the DLM run\n",
     "\n",
-    "        # DLM hyper parameters\n",
-    "        sigma_trend[:, pressure, latitude] = fit.extract()['sigma_trend']\n",
-    "        sigma_seas[:, pressure, latitude] = fit.extract()['sigma_seas']\n",
-    "        sigma_AR[:, pressure, latitude] = fit.extract()['sigma_AR']*scale # Also needs re-scaling back to data units\n",
-    "        rho_AR[:, pressure, latitude] = fit.extract()['sigma_AR']\n",
-    "        \n",
+    "            # Trend\n",
+    "            trend[:, pressure, latitude, :] = fit.extract()['trend'][:,:]*scale + mean\n",
+    "\n",
+    "            # Gradient of the DLM trend\n",
+    "            slope[:, pressure, latitude, :] = fit.extract()['slope'][:,:]*scale\n",
+    "\n",
+    "            # Seasonal cycle\n",
+    "            seasonal[:, pressure, latitude, :] = fit.extract()['seasonal'][:,:]*scale\n",
+    "\n",
+    "            # Residuals\n",
+    "            residuals[:, pressure, latitude, :] = fit.extract()['residuals'][:,:]*scale\n",
+    "\n",
+    "            # Regressor coefficients (also need re-scaling back to data units)\n",
+    "            regressor_coefficients[:, pressure, latitude, :] = fit.extract()['beta'][:,:]*scale\n",
+    "\n",
+    "            # DLM hyper parameters\n",
+    "            sigma_trend[:, pressure, latitude] = fit.extract()['sigma_trend']\n",
+    "            sigma_seas[:, pressure, latitude] = fit.extract()['sigma_seas']\n",
+    "            sigma_AR[:, pressure, latitude] = fit.extract()['sigma_AR']*scale # Also needs re-scaling back to data units\n",
+    "            rho_AR[:, pressure, latitude] = fit.extract()['sigma_AR']\n",
+    "\n",
     "        # Update the progress bar\n",
-    "        pbar.update(1)\n",
-    "        \n",
-    "results.close()"
+    "        pbar.update(1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Save all the results\n",
+    "np.save(open('results/trend.npy', 'wb'), trend)\n",
+    "np.save(open('results/slope.npy', 'wb'), slope)\n",
+    "np.save(open('results/seasonal.npy', 'wb'), seasonal)\n",
+    "np.save(open('results/residuals.npy', 'wb'), residuals)\n",
+    "np.save(open('results/regressor_coefficients.npy', 'wb'), regressor_coefficients)\n",
+    "np.save(open('results/sigma_trend.npy', 'wb'), sigma_trend)\n",
+    "np.save(open('results/sigma_seas.npy', 'wb'), sigma_seas)\n",
+    "np.save(open('results/sigma_AR.npy', 'wb'), sigma_AR)\n",
+    "np.save(open('results/rho_AR.npy', 'wb'), rho_AR)"
+   ]
   }
  ],
  "metadata": {
