added some extra comments to dlm_tutorial.ipynb

--- a/dlm_tutorial.ipynb
+++ b/dlm_tutorial.ipynb
@@ -128,7 +128,7 @@
    "source": [
     "## Import the regressors\n",
     "\n",
-    "**Here we import some standard regressors that are provided in the `regressors/` folder, but of course you can import your own regressors here as you please. In this example I import regressor data and interpolate on to the same time-grid as the imported data.**\n",
+    "**Here we import some standard regressors that are provided in the `regressors/` folder, but of course you can import your own regressors here as you please. In this example I import regressor data and interpolate on to the same time-grid as the imported data. For this example we import some standard indicies for: El Nino Southern Oscillation (ENSO), Solar activity (Solar), the Quasi-Biennial Oscillation (QBO; two indicies QBO30 and QBO50) and stratospheric aerosol optical depth (SAOD) for volcanic eruptions.**\n",
     "\n",
     "**Again you can import the regressors however you like, but the result must be the following variable loaded into python:**\n",
     "\n",
