make regressor filenames case consistent

--- a/dlm_tutorial.ipynb
+++ b/dlm_tutorial.ipynb
@@ -207,12 +207,12 @@
     "# Import the regressors\n",
     "\n",
     "# ENSO\n",
-    "regressor_data = np.loadtxt('regressors/enso_mei_1950_201802.txt')\n",
+    "regressor_data = np.loadtxt('regressors/ENSO_MEI_1950_201802.txt')\n",
     "Y = interpolate.InterpolatedUnivariateSpline(regressor_data[:,0], regressor_data[:,1])\n",
     "enso = Y(T)\n",
     "\n",
     "# SOLAR\n",
-    "regressor_data = np.loadtxt('regressors/flux_F30_monthly_195111_201803_absolute.txt')\n",
+    "regressor_data = np.loadtxt('regressors/Flux_F30_monthly_195111_201803_absolute.txt')\n",
     "Y = interpolate.InterpolatedUnivariateSpline(regressor_data[:,0], regressor_data[:,1])\n",
     "solar = Y(T)\n",
     "\n",
@@ -288,7 +288,9 @@
     "`sigma_AR_prior` (float) *standard deviation of the half_Gaussian prior on the AR1 process's standard deviation; set to 0.5 as default*<br/>\n",
     "`sigma_reg_prior` np.array(nreg) *standard deviation of the half_Gaussian prior on* `sigma_reg` *parameters, controling how dynamic the regressor amplitudes can be (in time); set to 1e-4 for all as default*\n",
     "\n",
-    "**Note: You can leave out parameters that are not included in your model, eg, if you are running a model without dynamical regressors you can leave out `sigma_reg_prior`, or if you are running a model without regressors you can leave out `regressors`. See `models/model_descriptions.pdf` (Table 1) for details of which parameters are included for which models.**\n",
+    "**Note: You should leave out parameters that are not included in your model, eg, if you are running a model without dynamical regressors you can leave out `sigma_reg_prior`, or if you are running a model without regressors you can leave out `regressors`. See Table 1 of `models/model_descriptions.pdf` for details of which parameters are included for which models.**\n",
+    "\n",
+    "**Units: Note that the std-deviation hyper-parameters (`sigma_trend`, `sigma_seas`, `sigma_AR` and `sigma_reg`) controlling how dynamic various components of the DLM model are, are defined in units of the range of the input data, ie, / (max(time_series) - min(time_series)). In this sense they define fractional standard-deviations wrt the data. This provides a common ground for defining priors on the dynamics hyper-parameters irrespective of the units of the data.**\n",
     "\n",
     "### `initial_state`\n",
     "\n",
@@ -424,7 +426,7 @@
     "# Seasonal cycle\n",
     "seasonal_cycle = fit.extract()['seasonal'][:,:]\n",
     "\n",
-    "# Regressor coefficients (also need re-scaling back to data units)\n",
+    "# Regressor coefficients\n",
     "regressor_coefficients = fit.extract()['beta'][:,:]\n",
     "\n",
     "# DLM hyper parameters\n",
