--- a/models/model_descriptions/model_descriptions.tex
+++ b/models/model_descriptions/model_descriptions.tex
@@ -191,28 +191,36 @@ This model has no regressors and is comprised only of a trend, seasonal cycle an
 %
 \subsubsection*{dlm\_dynregs\_AR1}
 This is the full general model described above, with an AR1 auto-regressive process.
-
+%
+\subsubsection*{dlm\_vanilla\_AR1\_noseasonal}
+As vanilla AR1 model but without a seasonal cycle (for eg., annual data).
+%
+\subsubsection*{dlm\_vanilla\_AR2\_noseasonal}
+As vanilla AR2 model but without a seasonal cycle (for eg., annual data).
+%
 \begin{table}
 \begin{center}
 \caption{Description of all of the inferred parameters available to each specific model implementation and how to refer to those parameters in the code. $N$ refers to the number of data points in the analyzed time-series, $n_\mathrm{reg}$ refers to the number of regressors that are used in the analysis.}
-\begin{tabular}{ccccccc}
+\begin{tabular}{ccccccccc}
 variable & name in code & type &
 \rot{dlm\_vanilla\_AR1} &
 \rot{dlm\_vanilla\_AR2} &
 \rot{dlm\_noregs\_AR1} & 
-\rot{dlm\_dynregs\_AR1} 
+\rot{dlm\_dynregs\_AR1} &
+\rot{dlm\_vanilla\_AR1\_noseasonal} &
+\rot{dlm\_vanilla\_AR2\_noseasonal}
     \\ \hline
-$\mu_t$ & \texttt{trend} & np.array(N) &  X   & X & X & X \\ 
-$\alpha_t$ & \texttt{slope} & np.array(N) &  X   & X & X & X \\ 
-$\beta_t$ & \texttt{beta} & np.array(N, $n_\mathrm{reg}$) &  X   & X &  & X \\ 
-$u_{12,t} + u_{6,t}$ & \texttt{seasonal} & np.array(N) &  X  & X & X & X \\ 
-$q_t$ & \texttt{ar} & np.array(N) &  X  & X & X & X \\ 
-$\sigma_\mathrm{trend}$ & \texttt{sigma\_trend} & float &  X   & X & X & X \\ 
-$\sigma_\mathrm{seas}$ & \texttt{sigma\_seas} & float &  X   & X & X & X \\ 
-$\sigma_\mathrm{AR}$ & \texttt{sigma\_AR} & float &  X   & X & X & X \\ 
-$\boldsymbol{\sigma}_{z}$ & \texttt{sigma\_reg} & np.array($n_\mathrm{reg}$) &    &  &  & X \\ 
-$\rho_1$ & \texttt{rhoAR1} & float &  X   & X & X & X \\ 
-$\rho_2$ & \texttt{rhoAR2} & float &   & X &  &  \\ 
+$\mu_t$ & \texttt{trend} & np.array(N) &  X   & X & X & X & X & X \\ 
+$\alpha_t$ & \texttt{slope} & np.array(N) &  X   & X & X & X & X & X \\ 
+$\beta_t$ & \texttt{beta} & np.array(N, $n_\mathrm{reg}$) &  X   & X &  & X & X & X \\ 
+$u_{12,t} + u_{6,t}$ & \texttt{seasonal} & np.array(N) &  X  & X & X & X & & \\ 
+$q_t$ & \texttt{ar} & np.array(N) &  X  & X & X & X & X & X \\ 
+$\sigma_\mathrm{trend}$ & \texttt{sigma\_trend} & float &  X   & X & X & X & X & X \\ 
+$\sigma_\mathrm{seas}$ & \texttt{sigma\_seas} & float &  X   & X & X & X & & \\ 
+$\sigma_\mathrm{AR}$ & \texttt{sigma\_AR} & float &  X   & X & X & X & X & X \\ 
+$\boldsymbol{\sigma}_{z}$ & \texttt{sigma\_reg} & np.array($n_\mathrm{reg}$) &    &  &  & X  & &\\ 
+$\rho_1$ & \texttt{rhoAR1} & float &  X   & X & X & X & X & X \\ 
+$\rho_2$ & \texttt{rhoAR2} & float &   & X &  & & & X  \\ 
  \hline
 \end{tabular}
 \end{center}
